--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,8 +7,16 @@ input {
 .form-value {
   background-color: darkred;
   color: white;
+  transition: all 0.1s ease-in-out;
 }
 
 .form-value.valid {
   background-color: darkgreen;
+}
+
+.sha {
+  justify-self: end;
+  margin-left: auto;
+  font-size: 0.8em;
+  opacity: 0.9;
 }
